src/test/run-pass/item-name-overload.rs



// -*- rust -*-
module foo {
    fn baz() { }
}

module bar {
    fn baz() { }
}

fn main() { }
