src/test/compile-fail/import-glob-rename.rs
// error-pattern:expected

import baz = foo::*;

module foo {
    fn bar() {}
}

fn main() {
}